Remove duplicated language strings

--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -58,8 +58,7 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Wähle, ob auf deine Bilder in Artikeln (Ei
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Abgerundet"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Kreis"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_THUMBNAIL="Miniaturansicht (BS4)"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED2="Gerundet (BS4)"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_THUMBNAIL="Miniaturansicht"
 
 ; Mobiles Menü
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobiles Menü</h4>"
