--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -58,8 +58,7 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Seleccione si desea que las imágenes de ar
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Círculo"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_THUMBNAIL="Miniatura (BS4)"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED2="Redonadeado (BS4)"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_THUMBNAIL="Miniatura"
 
 ; Menu móvil
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Menu Móvil</h4>"
