Set the initial SCSS compiler structure

--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -90,3 +90,10 @@ TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Important!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Save changes first, then click this button to rebuild the CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Modify and compile the Custom style from <strong><a href="%s" target="_blank">this template style <span class="icon-out-2"></span></a></strong>"
+
+; Compile SCSS
+TPL_JS_WRIGHT_COMPILE_SCSS="Compile SCSS to CSS"
+TPL_JS_WRIGHT_COMPILE_SCSS_ERROR="There was an error!"
+TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="Compiling SCSS..."
+TPL_JS_WRIGHT_COMPILE_SCSS_SUCCESS="Custom style compiled!"
+TPL_JS_WRIGHT_COMPILE_SCSS_INSTRUCTIONS="Save changes first, then click this button to rebuild the CSS"
