--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -100,3 +100,10 @@ TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom Style zusammengestellt!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Wichtig!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
 TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Ändern und kompilieren Sie den benutzerdefinierten Stil aus <strong><a href="%s" target="_blank">diesem Vorlagenstil <span class="icon-out-2"></span></a></strong>"
+
+; Compile SCSS
+TPL_JS_WRIGHT_COMPILE_SCSS="SCSS zu CSS kompilieren"
+TPL_JS_WRIGHT_COMPILE_SCSS_ERROR="Es gab einen Fehler!"
+TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="SCSS kompilieren..."
+TPL_JS_WRIGHT_COMPILE_SCSS_SUCCESS="Custom Style zusammengestellt!"
+TPL_JS_WRIGHT_COMPILE_SCSS_INSTRUCTIONS="Speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
