Minor improvement for SCSS compiling message

--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -104,6 +104,6 @@ TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Ändern und kompilieren Sie den 
 ; Compile SCSS
 TPL_JS_WRIGHT_COMPILE_SCSS="SCSS zu CSS kompilieren"
 TPL_JS_WRIGHT_COMPILE_SCSS_ERROR="Es gab einen Fehler!"
-TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="SCSS kompilieren..."
+TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="SCSS kompilieren. Warten sie mal..."
 TPL_JS_WRIGHT_COMPILE_SCSS_SUCCESS="Custom Style zusammengestellt!"
 TPL_JS_WRIGHT_COMPILE_SCSS_INSTRUCTIONS="Speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
