--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -94,6 +94,6 @@ TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Modify and compile the Custom st
 ; Compile SCSS
 TPL_JS_WRIGHT_COMPILE_SCSS="Compile SCSS to CSS"
 TPL_JS_WRIGHT_COMPILE_SCSS_ERROR="There was an error!"
-TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="Compiling SCSS..."
+TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="Compiling SCSS. Please wait..."
 TPL_JS_WRIGHT_COMPILE_SCSS_SUCCESS="Custom style compiled!"
 TPL_JS_WRIGHT_COMPILE_SCSS_INSTRUCTIONS="Save changes first, then click this button to rebuild the CSS"
