--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -98,6 +98,6 @@ TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Modificar y compilar el estilo p
 ; Compilar SCSS
 TPL_JS_WRIGHT_COMPILE_SCSS="Compilar SCSS a CSS"
 TPL_JS_WRIGHT_COMPILE_SCSS_ERROR="¡Ha habido un error!"
-TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="Compilando SCSS..."
+TPL_JS_WRIGHT_COMPILE_SCSS_COMPILING="Compilando SCSS. Por favor espera..."
 TPL_JS_WRIGHT_COMPILE_SCSS_SUCCESS="¡Estilo personalizado compilado!"'
 TPL_JS_WRIGHT_COMPILE_SCSS_INSTRUCTIONS="Guarda cambios primero, luego haz click en este botón para generar el CSS"
